# microservices

./: .env  .gitignore  Cargo.toml  PROJECT_STATUS.md  docker-compose.yml  run-services.sh  test-client.sh
common/: Cargo.toml
common/src/: lib.rs
proto/: game.proto  user.proto
services/game-service/: Cargo.toml  build.rs
services/game-service/migrations/: 001_create_games.sql
services/game-service/src/: db.rs  grpc_service.rs  handlers.rs  main.rs  models.rs  routes.rs  types.rs
services/gateway-service/: Cargo.toml  build.rs
services/gateway-service/src/: main.rs
services/user-service/: .env  Cargo.toml
services/user-service/migrations/: 001_create_users.sql
services/user-service/src/: db.rs  error.rs  main.rs  validation.rs
