[workspace]
members = [
    "common",
    "services/user-service",
    "services/gateway-service",
    "services/game-service",
    "services/product-service"
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13" 
tonic-build = "0.12"
regex = "1"
rust_decimal = "1.34"
dotenv = "0.15"