[package]
name = "game-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }

chrono = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
tonic-reflection = "0.12"
prost = { workspace = true }
prost-types = { workspace = true }
rust_decimal = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "rust_decimal"] }

reqwest = { version = "0.11", features = ["json", "multipart"] }

[build-dependencies]
tonic-build = { workspace = true }
