[package]
name = "gateway-service"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }

tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
regex = { workspace = true }

actix-web = "4"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
env_logger = "0.11"

[build-dependencies]
tonic-build = { workspace = true }
