[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }

# Из workspace
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }

# Локально добавленные
prost-types = "0.13"

# SQLx с нужными фичами
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }

# Хеширование паролей
argon2 = "0.5"

# Переменные окружения
dotenv = "0.15"

# Десятичные числа (Decimal)
rust_decimal = "1.34"

[build-dependencies]
tonic-build = { workspace = true }
