[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }

# ะะท workspace
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
regex = { workspace = true }
prost-types = { workspace = true }
rust_decimal = { workspace = true }
dotenv = { workspace = true }

sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5"

[build-dependencies]
tonic-build = { workspace = true }
